--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">Color Pictures</string>
+    <string name="imagen_camara">imagen camara</string>
+    <string name="imagen_video">imagen video</string>
+    <string name="imagen_galeria_fotos">imagen galeria fotos</string>
+    <string name="imagen_galeria_videos">imagen galeria videos</string>
 </resources>
